--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   },
   "homepage": "https://github.com/bhandeystruck/react-covid-tracker#readme",
   "dependencies": {
-    "create-react-app": "^4.0.3"
+    "chart.js": "^2.9.4",
+    "create-react-app": "^4.0.3",
+    "react-chartjs-2": "^2.11.1"
   }
 }
