--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
   "dependencies": {
     "chart.js": "^2.9.4",
     "create-react-app": "^4.0.3",
-    "react-chartjs-2": "^2.11.1"
+    "leaflet": "^1.7.1",
+    "react": "^17.0.1",
+    "react-chartjs-2": "^2.11.1",
+    "react-dom": "^17.0.1",
+    "react-leaflet": "^3.1.0"
   }
 }
